fix: Adjusted CSS values to fix spacing and font weight

--- a/frontend/src/styles/LoginPage.css
+++ b/frontend/src/styles/LoginPage.css
@@ -21,16 +21,29 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    max-width: 500px;
+    max-width: 600px;
     margin-top: 2rem;
     background-color: white;
     color: black;
     font-weight: 500;
     border-radius: 25px;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
     padding-bottom: 2.5rem;
     box-sizing: border-box;
+}
+
+.login-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    width: 90%;
+}
+
+.login-header {
+    font-size: 1.8rem;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -44,24 +57,15 @@ body {
   }
 }
 
-@media (min-width: 400px) {
-   .login-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: auto;
-    width: 80%;
-  } 
-}
-
-
-.login-header {
-    font-size: 1.8rem;
-    text-align: center;
+@media (min-width: 800px) {
+    .login-footer {
+        width: 70%;
+    }
 }
 
 .form-group {
     margin-bottom: 1.25rem;
+    font-size: 1.2rem;
 }
 
 .form-label {
@@ -119,14 +123,6 @@ body {
 
 .login-container h1 {
     color: red;
-}
-
-.login-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: auto;
-    width: 80%;
 }
 
 .login-footer a {
